--- a/firstapp/main/templates/index.html
+++ b/firstapp/main/templates/index.html
@@ -6,7 +6,7 @@
   {{ daddy }}
   <table class="table table-bordered">
       <thead>
-        <th>Колонка 1</th>
+        <th><a href="{% url 'stadytopic' id  %}">Перейти к теме</a></th>
         <th>Колонка 2</th>
         <th>Колонка 3</th>
         <th>Колонка 4</th>
