--- a/firstapp/templates/blog/program.html
+++ b/firstapp/templates/blog/program.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="box">
   <div class="box-header with-border">
-    <h3 class="box-title">Ваши программы обучения</h3>
+    <h3 class="box-title">Ваши программы обучения, {{user}}</h3>
 
     <div class="box-tools pull-right">
       <button type="button" class="btn btn-box-tool" data-widget="collapse" data-toggle="tooltip" title="" data-original-title="Collapse">
@@ -29,14 +29,14 @@
             </div>
             <!-- /.box-header -->
             <div class="box-body" style="display: none;">
-              The body of the box
+              {{ program.fullname }}
             </div>
             <!-- /.box-body -->
             <div class="box-footer no-padding">
                 <ul class="nav nav-stacked">
-                  <li><a href="#">Projects<span class="pull-right badge bg-blue">31</span></a></li>
-                  <li><a href="#">Tasks <span class="pull-right badge bg-aqua">5</span></a></li>
-                  <li><a href="#">Completed Projects <span class="pull-right badge bg-green">12</span></a></li>
+                  <li><a href="{% url 'stadyprogramlist' %}">Пройти курс<span class="pull-right badge bg-blue">31</span></a></li>
+                  <li><a href="#">Тренировка <span class="pull-right badge bg-aqua">5</span></a></li>
+                  <li><a href="#">Экзамен <span class="pull-right badge bg-green">12</span></a></li>
                   <li><a href="#">Followers <span class="pull-right badge bg-red">842</span></a></li>
                 </ul>
               </div>
