--- a/firstapp/templates/examquestions/training.html
+++ b/firstapp/templates/examquestions/training.html
@@ -3,47 +3,51 @@
 
 
 {% block content %}
-<table>
-  <tr>
-
-{% for numb, id in questions.items %}
-<td>
-<a href="{% url 'answers' id  %}" type="button" class="btn btn-block btn-default btn-sm">Вопрос № {{ numb }}</a>
-{% endfor %}
-</td>
-</tr>
-</table>
-<div class="box">
-  <div class="box-header with-border">
-    <h3 class="box-title">Title</h3>
-
-    <div class="box-tools pull-right">
-      <button type="button" class="btn btn-box-tool" data-widget="collapse" data-toggle="tooltip" title="" data-original-title="Collapse">
-        <i class="fa fa-minus"></i></button>
-        <button type="button" class="btn btn-box-tool" data-widget="remove" data-toggle="tooltip" title="" data-original-title="Remove">
-          <i class="fa fa-times"></i></button>
-        </div>
+<div class="margin">
+  <div class="btn-group">
+    {% for numb, values in questions.items %}
+      {% if values.check == 1 %}
+          <a href="{% url 'training' numb  %}" type="button" class="btn btn-success btn-sm">
+        {% elif values.check == 0 %}
+          <a href="{% url 'training' numb  %}" type="button" class="btn btn-danger btn-sm">
+        {% elif numb == numquest %}
+          <a href="{% url 'training' numb  %}" type="button" class="btn btn-warning btn-sm">
+        {% else %}
+          <a href="{% url 'training' numb  %}" type="button" class="btn btn-default btn-sm">
+        {% endif%}
+          Вопрос № {{ numb }}</a>
+        {% endfor %}
       </div>
-      <div class="box-body">
-        <form class="" action="index.html" method="post">
-          <div class="form-group">
-            {% for answer in answers %}
-                <div class="checkbox">
-                  <label>
-                    <input type="checkbox" value="{{ answer.id }}">
-                    {{ answer.text }}
-                  </label>
-                </div>
-            {% endfor %}
-
-              </div>
-
-      </div>
-      <!-- /.box-body -->
-      <div class="box-footer">
-        <button type="submit" class="btn btn-success"">Ответить</button>
-        </form>
-      </div>
-      <!-- /.box-footer-->
+  </div>
+  <div class="box">
+    <div class="box-header with-border">
+      {% for key, value in questions.items %}
+        {% if key == numquest %}
+          <h3 class="box-title">{{ value.textques }}</h3>
+        {% endif%}
+      {% endfor %}
     </div>
-    {% endblock %}
+      <form class="" action="{% url 'training' numquest  %}" method="post">
+        {% csrf_token %}
+          <div class="box-body">
+            <div class="form-group">
+              {% if answers %}
+                {% for answer in answers %}
+                  <div class="checkbox">
+                    <label>
+                      <input type="radio" name = "{{ numquest }}" value="{{ answer.id }}">
+                      {{ answer.text }}
+                    </label>
+                  </div>
+                {% endfor %}
+              {% endif%}
+            </div>
+          </div>
+              <!-- /.box-body -->
+          <div class="box-footer">
+            <button type="submit" class="btn btn-success"">Ответить</button>
+          </div>
+      </form>
+      <!-- /.box-footer-->
+</div>
+{% endblock %}
