Внесли правки в порядок формирования данных в сессиюю В форме отображается выбранный ранее вариант

--- a/firstapp/templates/examquestions/training.html
+++ b/firstapp/templates/examquestions/training.html
@@ -6,12 +6,12 @@
 <div class="margin">
   <div class="btn-group">
     {% for numb, values in questions.items %}
-      {% if values.check == 1 %}
-          <a href="{% url 'training' numb  %}" type="button" class="btn btn-success btn-sm">
+      {% if numb == numquest %}
+          <a href="{% url 'training' numb  %}" type="button" class="btn btn-warning btn-sm">
         {% elif values.check == 0 %}
           <a href="{% url 'training' numb  %}" type="button" class="btn btn-danger btn-sm">
-        {% elif numb == numquest %}
-          <a href="{% url 'training' numb  %}" type="button" class="btn btn-warning btn-sm">
+        {% elif values.check == 1 %}
+          <a href="{% url 'training' numb  %}" type="button" class="btn btn-success btn-sm">
         {% else %}
           <a href="{% url 'training' numb  %}" type="button" class="btn btn-default btn-sm">
         {% endif%}
@@ -31,23 +31,20 @@
         {% csrf_token %}
           <div class="box-body">
             <div class="form-group">
-              {% if answers %}
-                {% for answer in answers %}
-                  <div class="checkbox">
-                    <label>
-                      <input type="radio" name = "{{ numquest }}" value="{{ answer.id }}">
-                      {{ answer.text }}
-                    </label>
-                  </div>
-                {% endfor %}
-              {% endif%}
+              {% for radio in form.user_answer %}
+              <div class="myradio">
+                {{ radio }}
+              </div>
+              {% endfor %}
+
+
             </div>
           </div>
               <!-- /.box-body -->
           <div class="box-footer">
-            <button type="submit" class="btn btn-success"">Ответить</button>
+            <input type="submit" class="btn btn-success"">
           </div>
       </form>
-      <!-- /.box-footer-->
+        <!-- /.box-footer-->
 </div>
 {% endblock %}
