Создали приложение permitions. Доработано тестирование. Требуется рефакторинг.

--- a/firstapp/templates/adminlte/lib/_main_header.html
+++ b/firstapp/templates/adminlte/lib/_main_header.html
@@ -6,7 +6,7 @@
         <!-- mini logo for sidebar mini 50x50 pixels -->
         <span class="logo-mini">{% block logo_text_small %}<b>A</b>LTE{% endblock %}</span>
         <!-- logo for regular state and mobile devices -->
-        <span class="logo-lg">{% block logo_text %}<b>Admin</b>LTE{% endblock %}</span>
+        <span class="logo-lg">{% block logo_text %}<b>OSH</b> Stady{% endblock %}</span>
     </a>
     {% endblock %}
 
