--- a/firstapp/templates/blog/program.html
+++ b/firstapp/templates/blog/program.html
@@ -36,7 +36,7 @@
                 <ul class="nav nav-stacked">
                   <li><a href="{% url 'stadyprogramlist' program.id  %}">Пройти курс<span class="pull-right badge bg-blue">31</span></a></li>
                   <li><a href="{% url 'training' program.id  %}">Тренировка <span class="pull-right badge bg-aqua">5</span></a></li>
-                  <li><a href="#">Экзамен <span class="pull-right badge bg-green">12</span></a></li>
+                  <li><a href="{% url 'examing' program.id  %}">Экзамен <span class="pull-right badge bg-green">12</span></a></li>
                   <li><a href="#">Followers <span class="pull-right badge bg-red">842</span></a></li>
                 </ul>
               </div>
