--- a/firstapp/templates/adminlte/lib/_main_header.html
+++ b/firstapp/templates/adminlte/lib/_main_header.html
@@ -30,13 +30,13 @@
                     {% if request.user.is_authenticated %}
                         <li class="dropdown user user-menu">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                                <img src="" class="user-image" alt="User Image">
+                                <img src="/media/andrew.jpg" class="user-image" alt="User Image">
                                 <span class="hidden-xs">{% firstof request.user.get_short_name request.user.get_username %}</span>
                             </a>
                             <ul class="dropdown-menu">
                                 {% block user_header %}
                                 <li class="user-header">
-                                    <img src="" class="img-circle" alt="User Image">
+                                    <img src="/media/andrew.jpg" class="img-circle" alt="User Image">
                                     <p>
                                         {% firstof request.user.get_short_name request.user.get_username %}
                                         <small>Member since {{ request.user.date_joined }}</small>
